--- a/files/Brewfile
+++ b/files/Brewfile
@@ -82,6 +82,7 @@ mas 'Velja', id: 1607635845
 # ----------------------------------------------------------------------------------------------------------
 cask 'aldente'
 # cask 'alfred'
+cask 'apparency'
 cask 'appcleaner'
 cask 'arc'
 cask 'brave-browser@nightly'
