--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -205,6 +205,7 @@
   excludesFile = ~/.gitignore_global   # Personal
   commentChar = *
   whitespace = fix
+  symlinks = false
 [diff]
   compactionHeuristic = true
   renames = true
