Switched from Flycut to Maccy due to search capability, better paste options

--- a/files/Brewfile
+++ b/files/Brewfile
@@ -93,7 +93,6 @@ cask 'command-x'
 # cask 'dbeaver-community'
 # cask 'dupeguru'
 cask 'firefox@nightly' #, greedy: true
-cask 'flycut'
 cask 'font-meslo-lg-nerd-font'
 # cask 'git-credential-manager'  # https://docs.github.com/en/get-started/getting-started-with-git/caching-your-github-credentials-in-git
 # cask 'intellij-idea-ce'
@@ -107,6 +106,7 @@ cask 'keybase'
 cask 'libreoffice'
 # cask 'licecap'
 # cask 'lulu'
+cask 'maccy'
 cask 'monolingual'
 # cask 'netspot'
 # cask 'ngrok'
