--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -1,8 +1,8 @@
 #!/usr/bin/env zsh
 
-[ -z "${USERNAME}" ] || [ -z "${PERSONAL_PROFILES_DIR}" ] && echo "Either USERNAME or PERSONAL_PROFILES_DIR env vars are not set. Aborting!!!" && exit
-
 type warn &> /dev/null 2>&1 || source "${HOME}/.shellrc"
+
+[ -z "${USERNAME}" ] || [ -z "${PERSONAL_PROFILES_DIR}" ] && warn "Either USERNAME or PERSONAL_PROFILES_DIR env vars are not set. Aborting!!!" && exit
 
 replace_dir_if_exists_and_is_not_symlinked() {
   [ ! -d "${1}" ] && [ ! -d "${PERSONAL_PROFILES_DIR}/${2}" ] && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
