Fix issue with the env var might not have been loaded before running the install-dotfiles on a vanilla OS Remove USERNAME and evaluate 'whoami' whenever needed

--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -2,7 +2,7 @@
 
 type warn &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
-[ -z "${USERNAME}" ] || [ -z "${PERSONAL_PROFILES_DIR}" ] && warn "Either USERNAME or PERSONAL_PROFILES_DIR env vars are not set. Aborting!!!" && exit
+[ -z "${PERSONAL_PROFILES_DIR}" ] && warn "Either PERSONAL_PROFILES_DIR env vars are not set. Aborting!!!" && exit
 
 replace_dir_if_exists_and_is_not_symlinked() {
   [ ! -d "${1}" ] && [ ! -d "${PERSONAL_PROFILES_DIR}/${2}" ] && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
