--- a/files/Brewfile
+++ b/files/Brewfile
@@ -68,6 +68,7 @@ brew 'zsh'
 # ----------------------------------------------------------------------------------------------------------
 brew 'mas'
 mas 'iBar-Menubar icon control tool', id: 6443843900
+# mas 'Command X', id: 6448461551
 
 # ----------------------------------------------------------------------------------------------------------
 cask 'aldente'
@@ -77,7 +78,6 @@ cask 'arc'
 cask 'brave-browser@nightly'
 cask 'clocker'
 cask 'cloudflare-warp'
-cask 'command-x'
 # cask 'dbeaver-community'
 # cask 'dupeguru'
 cask 'firefox@nightly' #, greedy: true
@@ -153,7 +153,6 @@ if is_vscode_installed
   vscode 'wholroyd.jinja'
   vscode 'wingrunr21.vscode-ruby'
   vscode 'wmaurer.change-case'
-  vscode 'xaver.clang-format'
   vscode 'yzhang.markdown-all-in-one'
 end
 
