--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -1,18 +1,18 @@
 #!/usr/bin/env zsh
 
-type warn &> /dev/null 2>&1 || source "${HOME}/.shellrc"
+type non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
-[ -z "${PERSONAL_PROFILES_DIR}" ] && warn "Either PERSONAL_PROFILES_DIR env vars are not set. Aborting!!!" && exit
+! non_zero_string "${PERSONAL_PROFILES_DIR}" && warn "'PERSONAL_PROFILES_DIR' env var is not set. Aborting!!!" && exit
 
 replace_dir_if_exists_and_is_not_symlinked() {
-  [ ! -d "${1}" ] && [ ! -d "${PERSONAL_PROFILES_DIR}/${2}" ] && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
+  ! var_exists_and_is_directory "${1}" && ! var_exists_and_is_directory "${PERSONAL_PROFILES_DIR}/${2}" && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
 
   mkdir -pv "$(dirname "${1}")"
   mkdir -pv "${PERSONAL_PROFILES_DIR}/${2}"
   # If the folder exists but is not a symlink, move it into the source location
-  [[ ! -L "${1}" && -d "${1}" ]] && rm -rf "${PERSONAL_PROFILES_DIR}/${2}" && mv -f "${1}" "${PERSONAL_PROFILES_DIR}/${2}"
+  var_exists_and_is_directory "${1}" && test ! -L "${1}" && rm -rf "${PERSONAL_PROFILES_DIR}/${2}" && mv -f "${1}" "${PERSONAL_PROFILES_DIR}/${2}"
   # if the folder doesn't exist, create the symlink
-  [[ ! -d "${1}" ]] && ln -sf "${PERSONAL_PROFILES_DIR}/${2}" "${1}" && echo "Successfully symlinked ${1} --> ${PERSONAL_PROFILES_DIR}/${2}!!!"
+  ! var_exists_and_is_directory "${1}" && ln -sf "${PERSONAL_PROFILES_DIR}/${2}" "${1}" && echo "Successfully symlinked ${1} --> ${PERSONAL_PROFILES_DIR}/${2}!!!"
 }
 
 # Capture Arc profile folder into git-tracked location
