Moved the 'includeIf' sections to the default gitconfig Register and start the git maintenance taskss for all repos

--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -8,10 +8,6 @@
 # Note: Even though this will show up twice in `git config -l` - it will still be overridden based on the order of the includeIf lines below (last matching configuration wins)
 [includeIf "gitdir/i:~/"]             # Personal
   path = ~/.gitconfig-oss.inc         # Personal
-[includeIf "gitdir/i:~/dev/jd/"]      # Personal
-  path = ~/.gitconfig-jd.inc          # Personal
-[includeIf "gitdir/i:~/dev/tw/"]      # Personal
-  path = ~/.gitconfig-tw.inc          # Personal
 [alias]
   # print the current directory from the context
   currentDir = rev-parse --show-toplevel
@@ -263,6 +259,9 @@
   defaultBranch = master
 [interactive]
   diffFilter = diff-so-fancy --patch
+[maintenance]
+  auto = false
+  strategy = incremental
 [merge]
   defaultToUpstream = true
   ff = only
