Add ChromeProfile to be tracked as a browser profile

--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -22,10 +22,10 @@ replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/
 replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/BraveSoftware/Brave-Browser-Nightly" "BraveProfile"
 
 # Capture Chrome profile folder into git-tracked location
-# replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/Google/Chrome" "ChromeProfile"
+replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/Google/Chrome" "ChromeProfile"
 
 # Capture Chrome Beta profile folder into git-tracked location
-# replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/Google/Chrome Beta" "ChromeBetaProfile"
+replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/Google/Chrome Beta" "ChromeBetaProfile"
 
 # Capture Ferdium profile folder into git-tracked location
 replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/Ferdium" "FerdiumProfile"
