--- a/files/.envrc
+++ b/files/.envrc
@@ -3,10 +3,10 @@
 #####################################
 # Reapply permissions for ssh files #
 #####################################
-[ -n "$(ls -A "${HOME}/.ssh")" ] && chmod -R 600 "${HOME}"/.ssh/*
+test -n "$(ls -A "${HOME}/.ssh")" && chmod -R 600 "${HOME}"/.ssh/*
 
 #######################################
 # Reapply permissions for gnupg files #
 #######################################
 # TODO: Not sure if this is correct/reqd (now that i have generated my own gpg key pair) - so commenting out for now
-# [ -n "$(ls -A "${HOME}/.gnupg")" ] && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
+# test -n "$(ls -A "${HOME}/.gnupg")" && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
