Configure diff-so-fancy to show empty lines if changed

--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -219,7 +219,7 @@
   colorMoved = default
   submodule = diff
 [diff-so-fancy]
-  markEmptyLines = false
+  # markEmptyLines = false
   # changeHunkIndicators = false
   # stripLeadingSymbols = false
   # useUnicodeRuler = false
