Remove thunderbird, commented out vscode plugins that i dont use any more

--- a/files/Brewfile
+++ b/files/Brewfile
@@ -79,7 +79,6 @@ cask 'raycast'
 cask 'silicon' if is_arm
 cask 'stats'
 cask 'the-unarchiver'
-cask 'thunderbird@daily'  # TODO: Commented out since I haven't opened TBird for the past 6 months - maybe its time to let go
 cask 'vscodium@insiders'   # TODO: Doesn't handle 'Remote Containers' and GH-based auto-syncing when comparing to VSCode
 cask 'zoom'
 
@@ -97,7 +96,7 @@ if is_vscode_installed
   vscode 'eamodio.gitlens'
   vscode 'editorconfig.editorconfig'
   vscode 'esbenp.prettier-vscode'
-  vscode 'formulahendry.code-runner'
+  # vscode 'formulahendry.code-runner'
   vscode 'genuitecllc.codetogether'
   vscode 'ibm.output-colorizer'
   vscode 'mechatroner.rainbow-csv'
@@ -105,20 +104,20 @@ if is_vscode_installed
   vscode 'mkhl.direnv'
   vscode 'ms-azuretools.vscode-docker'
   vscode 'ms-vscode.vscode-typescript-next'
-  vscode 'nicolasvuillamy.vscode-groovy-lint'
+  # vscode 'nicolasvuillamy.vscode-groovy-lint'
   vscode 'oderwat.indent-rainbow'
   vscode 'orta.vscode-jest'
   vscode 'rebornix.ruby'
-  vscode 'redhat.java'
+  # vscode 'redhat.java'
   vscode 'redhat.vscode-yaml'
   vscode 'richie5um2.vscode-sort-json'
   vscode 'shan.code-settings-sync'
   # vscode 'sonarsource.sonarlint-vscode'
   vscode 'tchayen.markdown-links'
   vscode 'tyriar.sort-lines'
-  vscode 'vscjava.vscode-java-debug'
-  vscode 'vscjava.vscode-java-pack'
-  vscode 'vscjava.vscode-java-test'
+  # vscode 'vscjava.vscode-java-debug'
+  # vscode 'vscjava.vscode-java-pack'
+  # vscode 'vscjava.vscode-java-test'
   # This is failing on different machines
   # vscode 'vscjava.vscode-lombok'
   vscode 'vscode-icons-team.vscode-icons'
